<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_orange"
    tools:context=".ui.main.fragment.MainFragment">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_dr_dolittle_s_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/daily_animal_text"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAnimalDoDia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:backgroundTint="@color/demi_transparent_orange"
        app:cardCornerRadius="10dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvNomeAnimalDoDia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif"
                tools:text="Suricato"
                android:textColor="@color/black"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivAnimalDoDia"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/animal1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/daily_chosen_animal" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btAnimaisDomesticos"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/home_category_horizontal"
        android:drawableStart="@drawable/dog"
        android:fontFamily="sans-serif"
        android:padding="16dp"
        android:text="@string/domestic_animals"
        android:textAllCaps="false"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvAnimalDoDia" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btAnimaisSelvagens"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/home_category_horizontal"
        android:backgroundTint="@color/purple_400"
        android:drawableStart="@drawable/lion"
        android:fontFamily="sans-serif"
        android:padding="16dp"
        android:text="@string/wild_animals"
        android:textAllCaps="false"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btAnimaisDomesticos" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btAnimaisPerigosos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/home_category_horizontal"
        android:backgroundTint="@color/dangerous_red"
        android:drawableTop="@drawable/snake"
        android:fontFamily="sans-serif"
        android:paddingBottom="32dp"
        android:paddingTop="16dp"
        android:paddingHorizontal="16dp"
        android:text="@string/dangerous_animals"
        android:textAllCaps="false"
        android:textSize="26sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btAnimaisSelvagens" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btAnimaisExtintos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/home_category_horizontal"
        android:backgroundTint="@color/extinct_blue"
        android:drawableTop="@drawable/dinossaur"
        android:fontFamily="sans-serif"
        android:paddingBottom="32dp"
        android:paddingTop="16dp"
        android:paddingHorizontal="16dp"
        android:text="@string/extinct_animals"
        android:lines="2"
        android:textAllCaps="false"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btAnimaisSelvagens" />

</androidx.constraintlayout.widget.ConstraintLayout>